--- a/introduccion1.ipynb
+++ b/introduccion1.ipynb
@@ -33,8 +33,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "daf099b4-736d-4eb1-ac3e-d08eae6fbe56",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gabriel\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (\"Gabriel\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a5c40ed-5d99-4c1d-9a59-eca623b0db74",
    "metadata": {},
    "outputs": [],
    "source": []
