--- a/tiposDatos.ipynb
+++ b/tiposDatos.ipynb
@@ -173,7 +173,7 @@
    "id": "96d0d48c-7074-4e53-b7af-977ab194d276",
    "metadata": {},
    "source": [
-    "## Literales\n",
+    "## 2.1 Literales\n",
     "\n",
     "* Pytohon tiene una serie de tipos de datos integrados en el propio lenguaje\n",
     "* Los literales son expresiones que generan objetos de estos tipos\n",
@@ -216,13 +216,750 @@
     "print('Hello world') # Objeto de tipo string\n",
     "print(False) # Objeto de tipo booleano, puede ser solo falso o verdadero (True/False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d15ab044-f214-43f5-8cfd-57099c295480",
+   "metadata": {},
+   "source": [
+    "### Literales compuestos\n",
+    "* Tuplas\n",
+    "* Listas\n",
+    "* Diccionarios\n",
+    "* Conjuntos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "b9ab34e3-9eb8-44e8-b968-e963804c4ba6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 3, 7]\n",
+      "{'Nombre': 'John Doe', 'edad': 30, 'soltero': True}\n",
+      "{1, 2, 3}\n",
+      "(4, 5)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(2, 4)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print ([1,2,3,3,7]) #Lista - mutable\n",
+    "print ({'Nombre' : 'John Doe', \"edad\": 30, \"soltero\":True}) #diccionario - mutable\n",
+    "print ({1,2,3,3}) #conjunto de datos - mutable (sin datos repetidos)\n",
+    "print ((4,5)) #tupla - inmutable (no se puede cambiar para nada)\n",
+    "2,4 #Tupla - inmutable (otra forma de crear)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65f37c3b-46b0-4875-832b-6fea8294c790",
+   "metadata": {},
+   "source": [
+    "## 2.2 Variables\n",
+    "* Referencias a objetos\n",
+    "* Las variables y los objetos se almacenan en espacios de memoria distinta\n",
+    "* Las variables siempre referencian a objetos y nunca a otras variables\n",
+    "* Los objetos sí pueden referenciar a otros objetos. Ejemplos: listas\n",
+    "* Sentencia de asignación:\n",
+    "\n",
+    "<\"nombre_variable\"> '=' <\"objeto\">\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "28288304-c18e-4ea4-929b-94b81b6a3d71",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Asignación de variables\n",
+    "a=5\n",
+    "print (a)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "1282e2a8-e238-4a34-bbbd-17442c80dd97",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "<class 'int'>\n",
+      "4.0\n",
+      "<class 'float'>\n",
+      "ITQ\n",
+      "<class 'str'>\n",
+      "(10+1j)\n",
+      "<class 'complex'>\n",
+      "False\n",
+      "<class 'bool'>\n",
+      "None\n",
+      "<class 'NoneType'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 1 # Entero\n",
+    "b = 4.0 # Flotante\n",
+    "c = \"ITQ\" # String\n",
+    "d = 10+1j # Complejo\n",
+    "e = False # Booleano\n",
+    "f = None # None\n",
+    "\n",
+    "#Imprimir variables y ver su tipo\n",
+    "print(a)\n",
+    "print(type(a))\n",
+    "\n",
+    "print(b)\n",
+    "print(type(b))\n",
+    "\n",
+    "print(c)\n",
+    "print(type(c))\n",
+    "\n",
+    "print(d)\n",
+    "print(type(d))\n",
+    "\n",
+    "print(e)\n",
+    "print(type(e))\n",
+    "\n",
+    "print(f)\n",
+    "print(type(f))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c4250e8e-8e6a-4ff4-9e82-792679cd13ef",
+   "metadata": {},
+   "source": [
+    "* Las variables no tienen tipo\n",
+    "* Las variables apuntan a objetos que sí lo tienen\n",
+    "* Dado que Python es un lenguaje de tipado dinámico la misma variable puede apuntar, em momentos diferentes de la ejecución del programa, a objetos de diferente tipo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "03a935d7-04bb-40ba-a84f-4c6a2111c9d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "<class 'int'>\n",
+      "100\n",
+      "<class 'int'>\n",
+      "Pablo\n",
+      "<class 'str'>\n",
+      "4.5\n",
+      "<class 'float'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 3\n",
+    "print (a)\n",
+    "print(type(a))\n",
+    "\n",
+    "a=100\n",
+    "print (a)\n",
+    "print(type(a))\n",
+    "\n",
+    "a=\"Pablo\"\n",
+    "print (a)\n",
+    "print(type(a))\n",
+    "\n",
+    "a=4.5\n",
+    "print (a)\n",
+    "print(type(a))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85a392ff-be57-41eb-8ec6-23fff48f52ee",
+   "metadata": {},
+   "source": [
+    "* Esto se llama garbage colection, es justamente la eliminación progresiva de los espacios de memoria que un objeto ocupa. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6dab095e-bb8b-4096-b27c-028a4ab2f52a",
+   "metadata": {},
+   "source": [
+    "## Identificadores\n",
+    "* Podemos obtener un identificador único para los objetos referenciados por variables.\n",
+    "* Este identificador se obtiene a partir de la dirección de memoria.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "534770d3-0aa1-4d08-9b6f-d91fde575d1a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "140712443683816\n",
+      "2018722456768\n",
+      "2018711782544\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=3\n",
+    "print (id(a))\n",
+    "\n",
+    "a= \"Pablo García\"\n",
+    "print(id(a))\n",
+    "\n",
+    "a=4.5\n",
+    "print(id(a))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a66707a4-0bfd-442c-96f5-05b0331fd689",
+   "metadata": {},
+   "source": [
+    "* Referencias compartidas: un mismo objeto puede ser referenciado por más de una variable\n",
+    "\n",
+    " - Variables que referencian al mismo objeto tienen mismo identificador."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "f347c4e0-fbb2-4f35-9367-ed4c901d3369",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2018722622064\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=4567\n",
+    "print(id(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "899cf440-f27c-41f3-abdc-0d7542c40189",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2018722622064\n"
+     ]
+    }
+   ],
+   "source": [
+    "b=a\n",
+    "print(id(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "45838eb6-99de-492e-b9f5-627d64bf652e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2018722623088\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=4567\n",
+    "print(id(c)) #se guarda en un espacio diferente es otro objeto"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "37474662-56e8-42c5-9883-d4813b094391",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "140712443684520\n",
+      "140712443684520\n",
+      "140712443684520\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=25\n",
+    "b=25\n",
+    "\n",
+    "print(id(a))\n",
+    "print(id(b))\n",
+    "print(id(25))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "35eeeeb4-c650-4f5b-8399-76554958fc9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2018722622064\n",
+      "2018722624208\n",
+      "2018722624752\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Los números grandes [-5,256] fuera del rango 0-255 \n",
+    "#van a abrir un nuevo ciclo de cuenta internamente, nunca tendrán un mismo identificador\n",
+    "a=258\n",
+    "b=258\n",
+    "\n",
+    "print(id(a))\n",
+    "print(id(b))\n",
+    "print(id(258))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32998bda-8a0c-4bdd-9c03-0ba94af64594",
+   "metadata": {},
+   "source": [
+    "* Referencia al mismo objeo a través de asignar una variable a otra"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "d2c06576-181b-494f-b7a5-05a83a52460d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2018722623888\n",
+      "2018722623888\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=400\n",
+    "b=a\n",
+    "print(id(a))\n",
+    "print(id(b))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28a3cfc1-6b7c-4d7d-86b0-99010a6dbdad",
+   "metadata": {},
+   "source": [
+    "* las variables pueden aparecer en expresiones"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "710bab64-7da0-401a-91a2-a786634a25e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "140712443683816\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=3\n",
+    "b=5\n",
+    "print(id(a))\n",
+    "print (a+b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "0ebedb59-0b58-4dd7-945c-a0e5ce5c04fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "140712443683976\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=a+b\n",
+    "print(c)\n",
+    "print(id(c))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a009d99-5f15-4942-b9f0-05d1b2a0fa7f",
+   "metadata": {},
+   "source": [
+    "### Nombres de las variables\n",
+    "* No se aceptan números delante del nombre de las variables\n",
+    "* Por convención usar el SnakeCase y no el CamelCase, es decir usar \"_\" para los espacios entre palabras en el nombre de la variable\n",
+    "* Tener cuidado, el lenguaje identifica mayúsculas y minúsculas\n",
+    "* Nombres deben ser descriptivos\n",
+    "* Hay palabras o métodos reservados -> se denominan Built-ins y KeyWords\n",
+    "  * NO ASIGNAR NOMBRES RESERVADOS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "ee8500ad-db95-433c-9f43-4a1396083a2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pow(3,2)) #Potencia"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "3087e3fc-7211-42d8-b160-0da510e1e910",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[33]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28;43mpow\u001b[39;49m\u001b[43m(\u001b[49m\u001b[32;43m3\u001b[39;49m\u001b[43m,\u001b[49m\u001b[32;43m2\u001b[39;49m\u001b[43m)\u001b[49m)\n\u001b[32m      3\u001b[39m \u001b[38;5;28mpow\u001b[39m=\u001b[32m1\u001b[39m \u001b[38;5;66;03m#built-in con valor reasignado\u001b[39;00m\n\u001b[32m      4\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mpow\u001b[39m(\u001b[32m3\u001b[39m,\u001b[32m2\u001b[39m))\n",
+      "\u001b[31mTypeError\u001b[39m: 'int' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "print(pow(3,2))\n",
+    "\n",
+    "pow=1 #built-in con valor reasignado\n",
+    "print(pow(3,2))\n",
+    "\n",
+    "#El lenguaje no comprende que hacer con la reasignación"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "ff9cf2f6-6b8b-4535-b811-d18fe70bdd64",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Redefine pow como una nueva función\n",
+    "def pow(a,b):\n",
+    "    return a+b\n",
+    "\n",
+    "print(pow(3,2)) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "feaabb02-2d92-41a7-a807-32cac9bf35db",
+   "metadata": {},
+   "source": [
+    "### Asignación múltiple de variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "a2082f73-4efd-41ba-bb6c-995b6b13f1e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3\n",
+      "(1, 2, 3, 7, 'Python')\n",
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "x,y,z = 1,2,3\n",
+    "print(x,y,z)\n",
+    "\n",
+    "t = x,y,z,7,\"Python\"\n",
+    "print(t)\n",
+    "print(type(t))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4657b99c-f765-49ee-a9d7-81b44327a74a",
+   "metadata": {},
+   "source": [
+    "* Esta técnica tiene un uso interesante: el intercambio de valores entre variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "4c7b9a83-f6dd-467d-ad1f-50de9757958f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=1\n",
+    "b=2\n",
+    "a,b =b,a\n",
+    "\n",
+    "print(a,b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "03948ae7-ff2a-4ba3-a50b-b25ad8680881",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 1 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=1\n",
+    "b=2\n",
+    "\n",
+    "c=a\n",
+    "a=b\n",
+    "b=c\n",
+    "print(a,b,c)\n",
+    "#existe un intercambio en secuencia"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6246a8b9-8390-4a21-aa32-92f1a5ab4400",
+   "metadata": {},
+   "source": [
+    "## 2.3 Tipos de datos básicos\n",
+    "\n",
+    "### Bool\n",
+    "\n",
+    "* Tiene 2 posibles valores: 'True' o 'False'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "e6680d84-4215-4a6b-913a-32257f2dbce6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "<class 'bool'>\n",
+      "True\n",
+      "<class 'bool'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=False\n",
+    "b=True\n",
+    "\n",
+    "print(a)\n",
+    "print(type(a))\n",
+    "\n",
+    "print(b)\n",
+    "print(type(b))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e9e40e6-a1e1-4865-9e7f-97369d6ce3af",
+   "metadata": {},
+   "source": [
+    "* \"True\" y \"False\" también son objetos que se guardan en caché, al igual que los enteros pequeños"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "f5bad5c1-17ba-421a-b42b-7f5573450d6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "140712442771936\n",
+      "140712442771968\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=True\n",
+    "b=False\n",
+    "\n",
+    "print(id(a))\n",
+    "print(id(b))\n",
+    "print(a is b)\n",
+    "print(a == b)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4badd76-dabf-45c9-a2ed-fe62c41e7b95",
+   "metadata": {},
+   "source": [
+    "### Números"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "8bbb4020-99fc-4df7-a500-dbc8516c0e3a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3.4\n",
+      "(2+4j)\n",
+      "0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(2) #Enteros, sin parte fraccional\n",
+    "print(3.4) #Flotantes, con parte fraccional\n",
+    "print(2+4j) #Complejos\n",
+    "print(1/2) #Racionales"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7eb3935-c9a1-4a6e-bfe9-d9b1d2a520d8",
+   "metadata": {},
+   "source": [
+    "* Diferentes representaciones: base 10,2,8,16"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "4fa04df9-32e3-442f-b236-39105ed554e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 58 #decimal\n",
+    "z = 0b00111010 #binario\n",
+    "w = 0o72 #octal\n",
+    "y = 0x3A #hexadecimal\n",
+    "print(x == y == z == w)\n",
+    "\n",
+    "#Todos representan el mismo número"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -234,7 +971,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.11"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
