Estructura if anidado y match

--- a/estructuras_control.ipynb
+++ b/estructuras_control.ipynb
@@ -266,6 +266,198 @@
     "else:\n",
     "    print(\"El número es impar\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d78d0bc-47d8-448a-8aa5-266403839156",
+   "metadata": {},
+   "source": [
+    "### URL AL REPOSITORIO\n",
+    "https://github.com/GabrielCulquiH/introduccionpythonnocturno/blob/main/estructuras_control.ipynb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a97d056-3d15-4040-9c14-fca652093bd1",
+   "metadata": {},
+   "source": [
+    "**CLASE 21/01/2026**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "980a2863-9463-4ebf-a092-40adc62439b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valor muy positivo\n"
+     ]
+    }
+   ],
+   "source": [
+    "val = 120\n",
+    "if val > 0:\n",
+    "    if val < 100:\n",
+    "        print('Valor positivo')\n",
+    "    else:\n",
+    "        print('Valor muy positivo')\n",
+    "else:\n",
+    "        print('Valor negativo')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "316384d9-06f0-4149-bee7-0bafee862c9c",
+   "metadata": {},
+   "source": [
+    "## SWITCH"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "7883fc64-440c-4c8a-8bc7-9b216ce0a743",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "positive\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "a = 8\n",
+    "match a:\n",
+    "    case _ if a > 0:\n",
+    "        print('positive')\n",
+    "    case _ if a == 0:\n",
+    "        print('zero')\n",
+    "    case _ if a < 0:\n",
+    "        print('negative')\n",
+    "    case _:\n",
+    "        print(\"ERROR DE NUMERO\")\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "76c22156-c5a8-47cd-a9ef-c3508ed518b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wrong Day\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 'x'\n",
+    "match a:\n",
+    "    case 'L':\n",
+    "        print(\"Lunes\")\n",
+    "    case 'M':\n",
+    "        print(\"Martes\")\n",
+    "    case 'X':\n",
+    "        print(\"Miercoles\")\n",
+    "    case _:\n",
+    "        print(\"Wrong Day\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e95b536-6f5b-47b4-9c4e-9cb119d386eb",
+   "metadata": {},
+   "source": [
+    "### EJERCICIO\n",
+    "\n",
+    "Crear un programa en Python donde el usuario ingrese por teclado el tipo de operación aritmética a realizar, ejemplo; suma, resta, división, multiplicación. Además, el usuario debe ingresar dos números enteros y que realice la operación seleccionada. Usar condicional match"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "e1cd9697-6676-464a-8f24-7e60ff83ecf5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculadora aritmética de dos números\n",
+      "Esta herramienta le permite realizar suma, resta multiplicación o división\n",
+      "Para suma escriba 'sum'\n",
+      "Para resta escriba 'rest'\n",
+      "Para multiplicación escriba 'mult'\n",
+      "Para división escriba 'div'\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingrese primer número:  5\n",
+      "Ingrese segundo número:  2\n",
+      "Ingrese la operación a realizar:  sffa\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OPERACIÓN NO DISPONIBLE\n"
+     ]
+    }
+   ],
+   "source": [
+    "#SOLUCIÓN\n",
+    "\n",
+    "print(\"Calculadora aritmética de dos números\")\n",
+    "print(\"Esta herramienta le permite realizar suma, resta multiplicación o división\")\n",
+    "print(\"Para suma escriba 'sum'\")\n",
+    "print(\"Para resta escriba 'rest'\")\n",
+    "print(\"Para multiplicación escriba 'mult'\")\n",
+    "print(\"Para división escriba 'div'\")\n",
+    "\n",
+    "n1 = int(input(\"Ingrese primer número: \"))\n",
+    "n2 = int(input(\"Ingrese segundo número: \"))\n",
+    "\n",
+    "a = input(\"Ingrese la operación a realizar: \")\n",
+    "\n",
+    "match a:\n",
+    "    case 'sum':\n",
+    "        print(f\"El resultado es {n1+n2}\")\n",
+    "    case \"rest\":\n",
+    "        print(f\"El resultado es {n1-n2}\")\n",
+    "    case \"mult\":\n",
+    "        print(f\"El resultado es {n1*n2}\")\n",
+    "    case \"div\":\n",
+    "        match n2:\n",
+    "            case _ if n2 == 0:\n",
+    "                print(\"ERROR EL DIVISOR ES 0\")\n",
+    "            case _ if n != 0:\n",
+    "                print(f\"El resultado es {n1/n2}\")\n",
+    "    case _:\n",
+    "        print(\"OPERACIÓN NO DISPONIBLE\")\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93ea9ef6-f834-45bf-9eac-f3924d2b6f17",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
