--- a/tiposDatos.ipynb
+++ b/tiposDatos.ipynb
@@ -11,7 +11,11 @@
     "\n",
     "![logo_python](img/pythonlogo.jpeg)\n",
     "\n",
-    "*Gabriel Culqui*"
+    "*Gabriel Culqui*\n",
+    "\n",
+    "URL AL REPOSITORIO\n",
+    "\n",
+    "**https://github.com/GabrielCulquiH/introduccionpythonnocturno/blob/main/tiposDatos.ipynb**"
    ]
   },
   {
@@ -4796,6 +4800,26 @@
     "\n",
     "print(f\"Lista ordenada: {lista_m}\")\n",
     "print(f\"La mediana es: {mediana}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
+   "id": "b0efa4e7-62bb-4280-acc0-f25bf6fb68b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'float'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "div = 5.5//2\n",
+    "\n",
+    "print(type(div))"
    ]
   }
  ],
