--- a/estructuras_control.ipynb
+++ b/estructuras_control.ipynb
@@ -11,7 +11,9 @@
     "\n",
     "![logo_python](img/pythonlogo.jpeg)\n",
     "\n",
-    "*Gabriel Culqui*"
+    "*Gabriel Culqui*\n",
+    "\n",
+    "https://github.com/GabrielCulquiH/introduccionpythonnocturno/blob/main/estructuras_control.ipynb"
    ]
   },
   {
@@ -457,7 +459,529 @@
    "cell_type": "markdown",
    "id": "93ea9ef6-f834-45bf-9eac-f3924d2b6f17",
    "metadata": {},
-   "source": []
+   "source": [
+    "URL CLASE 21-01-2026\n",
+    "https://github.com/GabrielCulquiH/introduccionpythonnocturno/blob/main/estructuras_control.ipynb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "98f86731-eb41-42f7-b0ee-a39b3d6380b9",
+   "metadata": {},
+   "source": [
+    "**CLASE 22-01-2026**\n",
+    "## Expresión ternaria\n",
+    "* Estructura if-else condensado en una línea.\n",
+    "* Se recomienda usar solo en casos sencillos.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "53c9b368-bf89-4a64-96a5-62f67a05594e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ejemplo: cálculo del valor absoluto de un número.\n",
+    "x = -3\n",
+    "resultado = x if x >= 0 else -x\n",
+    "print(resultado)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "cbbfc602-849a-47e0-9614-aeaccdb98c62",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "val = -3\n",
+    "if val >=0:\n",
+    "    resultado = val\n",
+    "else:\n",
+    "    resultado = -val\n",
+    "\n",
+    "print(resultado)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e5581eb-5b3b-4861-9961-dea374d92e31",
+   "metadata": {},
+   "source": [
+    "**Concatenación de comparaciones**\n",
+    "* Se pueden concatenar comparaciones en una misma expresión:\n",
+    "    * and: true, si ambos son true.\n",
+    "    * or: true, si al menos uno es true.\n",
+    "    * not: inversión del valor de verdad de una expresión.\n",
+    "* ‘elif’ para comparar tras un ‘if"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "5defa88a-69d9-478b-9367-9146e89e4362",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Buena película!\n"
+     ]
+    }
+   ],
+   "source": [
+    "genero = 'Acción'\n",
+    "fecha_de_estreno = 1991\n",
+    "if genero == 'Comedia' or genero == 'Acción':\n",
+    "    print('Buena película!')\n",
+    "elif fecha_de_estreno >= 1990 and fecha_de_estreno < 2000:\n",
+    "    print('Buena década!')\n",
+    "else:\n",
+    "    print('Meh')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9faff8b-dbb1-4dc4-925c-48b4d8c100b8",
+   "metadata": {},
+   "source": [
+    "**Comparación de variables: ‘==’ vs ‘is’**\n",
+    "* ‘==’ compara si el valor de las variables es el mismo\n",
+    "* ‘is’ compara si los objetos en las variables son iguales (referencia)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "cc189d1c-7663-4dd8-809d-88fe6c5bd937",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "<class 'int'>\n",
+      "<class 'int'>\n",
+      "True\n",
+      "1427451179728\n",
+      "1427451179728\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 1000\n",
+    "b = a\n",
+    "print(a is b)\n",
+    "print(a == b)\n",
+    "c=type(a)\n",
+    "print(c)\n",
+    "d=type(b)\n",
+    "print(d)\n",
+    "print(c==d)\n",
+    "print(id(a))\n",
+    "print(id(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "559186bf-d59f-4657-914e-aeff41479a05",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "True\n",
+      "1427448827584\n",
+      "1427448838016\n",
+      "1427448827584\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1, 2, 3]\n",
+    "b = [1, 2, 3]\n",
+    "c = a\n",
+    "print(a is b)\n",
+    "print(a is c)\n",
+    "print(a == b)\n",
+    "print(id(a))\n",
+    "print(id(b))\n",
+    "print(id(c))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "210f1599-9569-4dfd-a646-87d0dcaf9489",
+   "metadata": {},
+   "source": [
+    "**Valor booleano**\n",
+    "* Todos los objetos en Python tiene inherentemente un valor booleano: True o False.\n",
+    "* Cualquier número distinto de 0 ó cualquier objeto no vacío tienen valor True.\n",
+    "* El número 0, objetos vacíos y el objeto especial None tienen valor False.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "bf9cd4e5-48ea-4279-bc3d-6cf4ed4f3f79",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a es True\n",
+      "b es False\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = -10 #True\n",
+    "b = None #False\n",
+    "if a:\n",
+    "    print(\"a es True\")\n",
+    "if not b:\n",
+    "    print(\"b es False\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "eaea417a-455c-4cf8-9aa7-e1a616cbbc8e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lista vacía\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = [1,2,3]\n",
+    "# a c le reasigno None\n",
+    "c = None #0 es igual a vacio a nada\n",
+    "if c:\n",
+    "    print(\"Lista no vacía\")\n",
+    "else:\n",
+    "    print(\"Lista vacía\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c2ae78c-19e2-42d3-a17f-4ae9bf1e23b4",
+   "metadata": {},
+   "source": [
+    "## Iteración (bucles)\n",
+    "\n",
+    "* Repetición de un bloque de código.\n",
+    "* La terminación del bucle depende del tipo de bucle.\n",
+    "* Dos tipos: while y for.\n",
+    "  \n",
+    "**Bucle ‘while’**\n",
+    "* Repetición de un bloque de código hasta que se deje cumplir una expresión (es decir, hasta\n",
+    "que una condición evalue a False).\n",
+    "* Si la condición evalua a False desde el principio, el bloque de código nunca se ejecuta.\n",
+    "* Cuidado con los bucles infinitos.\n",
+    "\n",
+    "Formato general:\n",
+    "\n",
+    "while test: # Mientras se cumple la condición\n",
+    "\n",
+    "    statements # Instrucciones a ejecutar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "8d4708d7-10df-4a06-b937-7a5687905254",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n",
+      "4\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ejemplo: Mostrar los primeros 3 objetos de una lista\n",
+    "indice = 0\n",
+    "numeros = [9, 4, 7, 1, 2]\n",
+    "while indice < 3:\n",
+    "    print(numeros[indice])\n",
+    "    indice =indice+1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "74adbf76-faed-4458-9a8e-a5de011ba299",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "9\n",
+      "1\n",
+      "7\n",
+      "8\n",
+      "Contador: 5\n",
+      "Indice: 9\n"
+     ]
+    }
+   ],
+   "source": [
+    " # Ejemplo: contar y mostrar los números inferiores a 10.\n",
+    "numeros = [33, 3, 9, 21, 1, 7, 12, 10, 8]\n",
+    "contador = 0\n",
+    "indice = 0\n",
+    "while indice < len(numeros):\n",
+    "    if numeros[indice] < 10:\n",
+    "        print(numeros[indice])\n",
+    "        contador = contador + 1\n",
+    "    indice = indice + 1\n",
+    "print('Contador:', contador)\n",
+    "print('Indice:', indice)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "d23553e0-fed7-4d87-bf8e-efdd4a7e9128",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pablo\n",
+      "ablo\n",
+      "blo\n",
+      "lo\n",
+      "o\n"
+     ]
+    }
+   ],
+   "source": [
+    "nombre = 'Pablo'\n",
+    "while nombre: # Mientras 'nombre' no sea vacío\n",
+    "    print(nombre)\n",
+    "    nombre = nombre[1:]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "7c15f316-8a51-440f-9c68-4ffd1e15462c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "# #bucle infinito\n",
+    "i = 0\n",
+    "while i < 10:\n",
+    "    print(i)\n",
+    "    i += 1\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53627e1d-30c4-4a42-83b1-18baabb6df82",
+   "metadata": {},
+   "source": [
+    "**EJERCICIOS**\n",
+    "1. Desarrollar un programa en Python donde se pida al usuario un número entero positivo y muestre en pantalla todos los números impares desde el 1 hasta ese número separado por comas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "id": "aba08705-bdda-4200-ab6c-42a69d0b44af",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Visualizador de números impares\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingrese su número:  8\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 5, 7, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Solución\n",
+    "print(\"Visualizador de números impares\")\n",
+    "num = int(input(\"Ingrese su número: \"))\n",
+    "impar = 1\n",
+    "lista_impar=[1,]\n",
+    "\n",
+    "while impar <= num:\n",
+    "    impar = impar + 2 \n",
+    "    lista_impar.append(impar)\n",
+    "    \n",
+    "print(lista_impar)                      "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "413434f4-d38b-483a-aaf2-ce8232c07503",
+   "metadata": {},
+   "source": [
+    "2. Desarrolle un programa en Python donde el usuario ingrese un número y luego se le pregunte al usuario si desea continuar con el programa, si la respuesta es sí, se permite ingresar un número, si el programa es no el programa termina, mostrar la suma de todos los números ingresados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "id": "ffca6883-fe23-4e92-be2c-eec2ae16836a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ingresar números hasta detener\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingrese nuevo número:  2\n",
+      "Desea detenerse si/no no\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Continuación de programa\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingrese nuevo número:  4\n",
+      "Desea detenerse si/no no\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Continuación de programa\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingrese nuevo número:  8\n",
+      "Desea detenerse si/no si\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Continuación de programa\n",
+      "Ejecución finalizada\n",
+      "Suma de todos los números ingresados: 14\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Solución\n",
+    "print(\"Ingresar números hasta detener\")\n",
+    "num = 0\n",
+    "suma = 0\n",
+    "est0 = \"si\"\n",
+    "est1 = \"no\"\n",
+    "\n",
+    "while est1 != est0:\n",
+    "    num = int(input(\"Ingrese nuevo número: \"))\n",
+    "    suma += num\n",
+    "    est1 = input(\"Desea detenerse si/no\")\n",
+    "    print(\"Continuación de programa\")\n",
+    "print(\"Ejecución finalizada\")\n",
+    "print(f\"Suma de todos los números ingresados: {suma}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0bb1604-3e04-4a18-b961-ac08a877541d",
+   "metadata": {},
+   "source": [
+    "## Bucle ‘for’\n",
+    "\n",
+    "* Permite recorrer los items de una sequencia o un objeto iterable.\n",
+    "* Funciona en strings, listas, tuplas, etc.\n",
+    "\n",
+    "Formato general:\n",
+    "for item in objeto:       # Asigna los items del objeto a la variable item en cada iteración\n",
+    "statements                # Instrucciones a ejecutar\n"
+   ]
   }
  ],
  "metadata": {
